@@ -1,3 +1,4 @@
+* Allow to add party information in sepa identification
 * Allow user to select a specific bank account during creation payment wizard
 * Allow to split sepa messages by RECUR vs FIRST
 * Add sepa bank payment reject date on a payment
